--- a/server/api/cars/.htaccess
+++ b/server/api/cars/.htaccess
@@ -1,8 +1,8 @@
 #DirectoryIndex index.php
 RewriteEngine On
-#RewriteBase /~user6/rest_task1/server/api/cars
+RewriteBase /~user14/rest1/server/api/cars
 
-RewriteBase /rest123/server/api/cars
+#RewriteBase /rest123/server/api/cars
 #RewriteBase /server/api/cars
 
 RewriteCond %{REQUEST_FILENAME} !-f
